--- a/style.css
+++ b/style.css
@@ -377,3 +377,43 @@ nav button:hover {
         font-size: 30px;
     }
 }
+
+/* Medium devices (desktops, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    /* Adjust carousel item content overlay */
+    .carousel .list .item {
+        margin-bottom: 15px;
+    }
+    .carousel .list .item .content {
+        margin-top: -60px;
+    }
+    /* Thumbnail adjustments */
+    .thumbnail .item {
+        margin: 4px;
+    }
+}
+
+/* Large devices (large desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    /* Carousel item image */
+    .carousel .list .item img {
+        height: 250px;
+    }
+    /* Thumbnail description */
+    .thumbnail .item .description {
+        font-size: 1.1em;
+    }
+}
+
+/* Extra large devices (extra large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    /* Carousel item image */
+    .carousel .list .item img {
+        height: 300px;
+    }
+    .thumbnail .item .description {
+        font-size: 1.2em;
+    }
+}
+
+
