--- a/style.css
+++ b/style.css
@@ -378,6 +378,48 @@ nav button:hover {
     }
 }
 
+/* Extra small devices (phones, less than 576px) */
+@media (max-width: 575.98px) {
+    /* Adjust carousel item content overlay */
+    .carousel .list .item .content {
+        margin-top: -40px;
+        font-size: 0.8em;
+    }
+    /* Thumbnail adjustments */
+    .thumbnail .item img {
+        width: 80%;
+    }
+    .thumbnail .item .description {
+        font-size: 0.9em;
+    }
+    /* Navigation arrows */
+    .arrows button {
+        font-size: 1em;
+        padding: 5px 8px;
+    }
+}
+
+/* Small devices (tablets, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    /* Adjust carousel item content overlay */
+    .carousel .list .item .content {
+        margin-top: -50px;
+        font-size: 0.9em;
+    }
+    /* Thumbnail adjustments */
+    .thumbnail .item img {
+        width: 90%;
+    }
+    .thumbnail .item .description {
+        font-size: 1em;
+    }
+    /* Navigation arrows */
+    .arrows button {
+        font-size: 1.1em;
+        padding: 6px 10px;
+    }
+}
+
 /* Medium devices (desktops, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
     /* Adjust carousel item content overlay */
@@ -415,5 +457,3 @@ nav button:hover {
         font-size: 1.2em;
     }
 }
-
-
